# CMonKey

./: .coverage  .coveragerc  .gitignore  CLAUDE.md  LICENSE  README.md  hostlist_gui.py  pyproject.toml  requirements-dev.txt  requirements.txt  rgb_keyboard.py  trigger_codex_complete.sh  trigger_task_complete.sh
.claude/commands/: qa.md
.github/workflows/: test.yml
aurenet/config/: settings.py  themes.py
aurenet/core/: errors.py  events.py  orchestrator.py  shutdown.py  types.py  utils.py
aurenet/effects/: __init__.py  base.py
aurenet/effects/ambient/: aurora.py  breathing.py  rainbow.py  sunset.py
aurenet/effects/interactive/: fire.py  matrix.py
aurenet/infrastructure/: filesystem.py  http.py  triggers.py
aurenet/input/: handler.py  keyboard_mapping.py
aurenet/monitoring/: base.py  checkmk.py
aurenet/tests/unit/: test_config.py  test_effects.py  test_events.py  test_infrastructure.py  test_input.py  test_input_handler.py  test_monitoring.py  test_orchestrator.py  test_shutdown.py  test_thread_safety.py
docs/: ARCHITECTURE.md  TESTING.md
